# HELMDB

./: .gitignore  CMakeLists.txt  Jenkinsfile  Third_Party_Open_Source_Software_Notice  configure
.devcontainer/: devcontainer.json
cmake/src/: build_options.cmake  set_thirdparty_path.cmake
cmake/src/config-in/: pg_config.h.in
contrib/pg_xlogdump/: cfs_mddesc.cpp  dss_adaptor.cpp  logicalddlmsgdesc.cpp  replorigindesc.cpp
contrib/test_decoding/: test_decoding.cpp
meta/: .gitignore  CMakeLists.txt  README.md
meta/docs/: cluster_management.md  how_to_use.md
meta/include/common/: meta_common.h
meta/include/meta_server/: cluster_manager.h  meta_map.h  meta_server.h  resource_manager.h  server_list.h  server_manager.h  server_struct.h  task2_service_impl.h
meta/meta_client/: CMakeLists.txt
meta/meta_client/include/: meta_client.h
meta/meta_client/src/: meta_client.cpp
meta/proto/: common.proto  meta.proto  task_2.proto
meta/src/meta_server/: cluster_manager.cpp  main.cpp  meta_map.cpp  meta_server.cpp  resource_manager.cpp  server_list.cpp  server_manager.cpp  task2_service_impl.cpp
meta_example/: .gitignore  CMakeLists.txt  README.md
meta_example/rpc_data/profiling/7a1804844dd19f1feb82bd2622b2f6cd/: 20240705.085242.contention
meta_example/rpc_data/profiling/7a1804844dd19f1feb82bd2622b2f6cd/20240705.085242.contention.cache/: dot
meta_example/src/: main.cpp
simpleInstall/: install.sh  install_standby.sh  slave.sh
src/: .gitignore  CMakeLists.txt  Jenkinsfile  Makefile.global.in  Makefile.global.in_for_llt
src/common/port/: fio_device.cpp  fio_dss.cpp
src/gausskernel/: CMakeLists.txt  Makefile
src/gausskernel/ddes/: ddes_commit_id
src/gausskernel/storage/: CMakeLists.txt  Makefile
src/gausskernel/storage/nvmdb/: CMakeLists.txt  Makefile
src/gausskernel/storage/nvmdb/fdw_adapter/: CMakeLists.txt  Makefile  nvm_fdw.cpp  nvm_fdw_iter.h
src/gausskernel/storage/nvmdb/include/: nvm_access.h  nvm_init.h  nvm_table.h  nvmdb_thread.h
src/gausskernel/storage/nvmdb/include/common/: lightweight_semaphore.h  lru.h  mpmc_queue.h  nvm_cfg.h  nvm_codec.h  nvm_global_bitmap.h  nvm_spinlock.h  nvm_types.h  nvm_utils.h  thread_pool_light.h
src/gausskernel/storage/nvmdb/include/common/pactree/: combiner.h  linked_list.h  list_node.h  pactree.h  pactree_impl.h  pactree_snapshot.h  search_layer.h  thread_data.h  versioned_lock.h  worker_thread.h
src/gausskernel/storage/nvmdb/include/common/pdl_art/: arch.h  epoch.h  key.h  n.h  nvm_ptr.h  op_log.h  ordo_clock.h  pmem.h  string_key.h  tree.h
src/gausskernel/storage/nvmdb/include/heap/: nvm_heap.h  nvm_heap_cache.h  nvm_heap_undo.h  nvm_rowid_map.h  nvm_rowid_mgr.h  nvm_tuple.h  nvm_vecstore.h
src/gausskernel/storage/nvmdb/include/index/: nvm_index.h  nvm_index_iter.h  nvm_index_tuple.h  nvm_index_undo.h
src/gausskernel/storage/nvmdb/include/table_space/: nvm_logic_file.h  nvm_table_space.h  nvm_unified_addr.h
src/gausskernel/storage/nvmdb/include/transaction/: nvm_snapshot.h  nvm_transaction.h
src/gausskernel/storage/nvmdb/include/undo/: nvm_undo.h  nvm_undo_context.h  nvm_undo_page.h  nvm_undo_ptr.h  nvm_undo_record.h  nvm_undo_rollback.h  nvm_undo_segment.h
src/gausskernel/storage/nvmdb/src/: nvm_access.cpp  nvm_init.cpp  nvm_table.cpp  nvmdb_thread.cpp
src/gausskernel/storage/nvmdb/src/common/: nvm_cfg.cpp  nvm_codec.cpp  nvm_global_bitmap.cpp
src/gausskernel/storage/nvmdb/src/common/pactree/: linked_list.cpp  list_node.cpp  pactree_impl.cpp  worker_thread.cpp
src/gausskernel/storage/nvmdb/src/common/pdl_art/: n.cpp  n16.hpp  n256.hpp  n4.hpp  n48.hpp  op_log.cpp  pmem.cpp  tree.cpp
src/gausskernel/storage/nvmdb/src/heap/: README.txt  nvm_heap.cpp  nvm_heap_undo.cpp  nvm_rowid_map.cpp  nvm_tuple.cpp  nvm_vecstore.cpp
src/gausskernel/storage/nvmdb/src/index/: nvm_index.cpp  nvm_index_undo.cpp
src/gausskernel/storage/nvmdb/src/table_space/: nvm_logic_file.cpp
src/gausskernel/storage/nvmdb/src/transaction/: nvm_snapshot.cpp  nvm_transaction.cpp
src/gausskernel/storage/nvmdb/src/undo/: README.txt  nvm_undo_rollback.cpp  nvm_undo_segment.cpp
src/gausskernel/storage/nvmdb/tests/: CMakeLists.txt
src/gausskernel/storage/nvmdb/tests/benchmarks/: Message.proto  Message_a.proto  Person.proto  index.cpp  numaheap.cpp  random_generator.h  smallbank.cpp  tpcc.cpp  tpcc.h
src/gausskernel/storage/nvmdb/tests/common/: bitmap_test.cpp  codec_test.cpp  datahack.cpp  pactree_test.cpp  test_declare.h
src/gausskernel/storage/nvmdb/tests/heap/: heap_cache_test.cpp  heap_test.cpp  vecstore_test.cpp
src/gausskernel/storage/nvmdb/tests/index/: index_test.cpp  index_test.h
src/gausskernel/storage/nvmdb/tests/table_space/: tablespace_test.cpp
src/gausskernel/storage/nvmdb/tests/undo/: undo_test.cpp
src/include/: pg_config.h.in  postgres.h
src/include/access/: generic_xlog.h  hnsw.h  ivfflat.h  reloptions.h  xact.h
src/include/bulkload/: dist_fdw.h
src/include/catalog/: index.h  indexing.h  mm_array.h  mm_documents.h  mm_graph.h  mm_graphmeta.h  mm_label.h  mm_vector.h  pg_aggregate.h  pg_am.h  pg_amop.data  pg_amproc.h  pg_cast.h  pg_opclass.h  pg_operator.data  pg_opfamily.h  pg_proc.h_for_llt  pg_type.h  pgxc_node.h  unused_oids
src/include/cm/: cm_errcodes.h
src/include/foreign/: foreign.h
src/include/knl/: knl_session.h  knl_thread.h
src/include/lib/: pairingheap.h
src/include/nodes/: execnodes.h  makefuncs.h  nodes.h  parsenodes.h  parsenodes_common.h  pg_list.h  plannodes.h  primnodes.h  relation.h
src/include/optimizer/: pathnode.h
src/include/parser/: analyze.h  kwlist.h  kwlist_d.h  parse_clause.h  parse_relation.h
src/include/replication/: walprotocol.h
src/include/storage/: sinval.h
src/include/tcop/: utility.h
src/include/utils/: be_module.h  plancache.h  selfuncs.h  syscache.h  vector.h
src/lib/elog/: elog.cpp
src/lib/page_compression/: cfs_tools.cpp  checksum_impl.cpp  pg_lzcompress.cpp  pg_lzcompress.h  pgsleep.cpp
src/test/regress/: parallel_schedule  parallel_schedule.lite  parallel_schedule.liteA  parallel_schedule0  parallel_schedule0A  (+4 more)
(+149 files in other folders)
